--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -12,7 +13,48 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
+      
+      <section class="card" id="html-section">
+        <h2>HTML</h2>
+        <ul>
+          <li>The head element contains info about the webpage</li>
+          <li>The body element represents the visible content shown to the user.</li>
+          <l1>section elements are semantic elements that define a section in a document that contains thematic content.</l1>
+          <li>HTML uses the id attribute as a way to identify elements and select them.</li>
+        </ul>
+      </section>
+   
+      <section class="card" id="css-section">
+        <h2>CSS</h2>
+        <ul>
+          <li>Three ways to style a webpage using CSS: inline, internal, and external CSS styling sheet</li>
+          <li>CSS rule: the selector defines the element or attribute. Declaration has the CSS property and value.</li>
+          <li>Box Model: contains margin, border, padding, and content.</li>
+          <li>Wild card symbol *: declares ALL elements on the page will have the style.</li>
+          <li>Add the link element in the header sectiopn, below the last meta element and before the title element.</title></li>
+          <li>Class attributes: .card designates this as a class selector. You can add the class in the sections of the HTMK code: section class="card" </section> </li>
+        </ul>
+   
+      </section>
+   
+      <section class="card" id="git-section">
+        <h2>Git</h2>
+        <ul>
+          <li>git status: checks what branch we are currently on</li>
+          <li>git checkout -b branch-name: creates a new branch and switches to it</li>
+          <li> git pull origin main: pull down the latest main branch</li>
+        </ul>
+   
+      </section>
+   
+      <section class="card" id="javascript-section">
+        <h2>JavaScript</h2>
+        <ul>
+          <li></li>
+        </ul>
+   
+      </section>
+
     </main>
 
     <footer>
