--- a/index.html
+++ b/index.html
@@ -51,7 +51,10 @@
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
         <ul>
-          <li></li>
+          <li>A variable is a named container that allows us to store data in our code</li>
+          <li>Control flow is the order in which a computer executes code in a script.</li>
+          <li>Te create a function, use the keywork function followed by a unique name for the function</li>
+          <li>In order to execute a function, make sure to call it by typing the unique name and semicolon.</li>
         </ul>
    
       </section>
